[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Dan Knutson <dan.knutson@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "app"

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
chrono = "0.4.15"
config = "0.10.1"

[dependencies.uuid]
version = "0.8.1"
features = ["v4"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.sqlx]
version = "0.4.0-beta.1"
default-features = false
features = ["runtime-tokio", "macros", "postgres", "uuid", "chrono", "migrate"]

[dev-dependencies]
reqwest = "0.10.7"
tokio = "0.2.22"
